--- a/Lenzs_Law/Lenzs_Law.html
+++ b/Lenzs_Law/Lenzs_Law.html
@@ -642,7 +642,7 @@
             </a>
           </li>
           <li>
-            <a href="#4.3" raw="##" lo="267" class="highlighted">
+            <a href="#4.3" raw="##" lo="267">
               <span class="toctext"></span>
             </a>
           </li>
@@ -952,9 +952,9 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="98" lf="100">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                   <div class="block">
                     <div class="inline-html">
                       <img src="figures/Loop_Sketch.svg">
@@ -972,12 +972,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="105" lf="107">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Out of the page</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                 </div>
               </div>
               <div class="block-info" style="display: none;"><span class="line-numbers">105-107</span></div>
@@ -990,12 +990,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="112" lf="115">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Counterclockwise</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                 </div>
               </div>
               <div class="block-info" style="display: none;"><span class="line-numbers">112-115</span></div>
@@ -1029,9 +1029,9 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="125" lf="127">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                   <div class="block">
                     <div class="inline-html">
                       <img src="figures/Loop_Sketch.svg">
@@ -1049,12 +1049,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="132" lf="134">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Into the page</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                 </div>
               </div>
               <div class="block-info" style="display: none;"><span class="line-numbers">132-134</span></div>
@@ -1067,12 +1067,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="139" lf="143">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Clockwise</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                   <div class="block">
                     <div class="inline-html">
                       <div class="newpage">
@@ -1114,12 +1114,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="153" lf="156">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: To the left. (Because the solenoid is composed of loops of current, the current loop right–hand rule can be used on a solenoid to determine the direction of the field it creates.)</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                 </div>
               </div>
               <div class="block-info" style="display: none;"><span class="line-numbers">153-156</span></div>
@@ -1141,12 +1141,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="162" lf="168">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: a. No flux change, so no induced magnetic field. b. No current.</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                   <div class="block">
                     <p padlength="0">a. Direction of induced magnetic field:</p>
                   </div>
@@ -1165,7 +1165,7 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="173" lf="181">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: As the loop moves to the right, the magnetic field is larger (field lines are more closely spaced). a. To oppose the change in flux, an induced magnetic field pointing to the left is needed. b. The current in the loop is such that the current on the darker part of the ring is upwards.</p>
                   </div>
@@ -1175,7 +1175,7 @@ c-16-25.333-24-45-24-59z"></path>
                     </div>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                   <div class="block">
                     <p padlength="0">a. Direction of induced magnetic field:</p>
                   </div>
@@ -1194,12 +1194,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="186" lf="192">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: The magnetic field is smaller to the left of the loop (the field lines are less closely spaced). a. To oppose the change in flux, an induced magnetic field pointing to the right is needed. b. The current in the loop is such that the current on the darker part of the ring is downwards.</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                   <div class="block">
                     <p padlength="0">a. Direction of induced magnetic field:</p>
                   </div>
@@ -1232,7 +1232,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="200" lf="212">
-          <div class="solutionstrue" style="display: block;">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="3"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: The field is out of the page above the long straight wire. Below, it is into the page (See section 28.3 of the Textbook). The magnitude of <span len="11" raw="_\bfvec{B}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">B</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                       <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
@@ -1257,7 +1257,7 @@ c-16-25.333-24-45-24-59z"></path>
               <p padlength="3">D. The induced field points out of the page. The current is counterclockwise.</p>
             </div>
           </div>
-          <div class="solutionsfalse" style="display: none;">
+          <div class="solutionsfalse" style="display: block;">
             <div class="block">
               <div class="inline-html">
                 <div class="newpage">
@@ -1295,9 +1295,9 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="222" lf="224">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                   <div class="block">
                     <div class="inline-html">
                       <img src="figures/Loop_Sketch_Increasing_A.svg" width="25%">
@@ -1315,12 +1315,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="229" lf="231">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Into the page</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                 </div>
               </div>
               <div class="block-info" style="display: none;"><span class="line-numbers">229-231</span></div>
@@ -1333,12 +1333,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="236" lf="239">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Clockwise</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                 </div>
               </div>
               <div class="block-info" style="display: none;"><span class="line-numbers">236-239</span></div>
@@ -1366,9 +1366,9 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="247" lf="249">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                   <div class="block">
                     <div class="inline-html">
                       <img src="figures/Loop_Sketch_Decreasing_A.svg" width="25%">
@@ -1386,12 +1386,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="254" lf="256">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Into the page</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                 </div>
               </div>
               <div class="block-info" style="display: none;"><span class="line-numbers">254-256</span></div>
@@ -1404,12 +1404,12 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="261" lf="265">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Clockwise</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                   <div class="block">
                     <div class="comment">%\newpage</div>
                   </div>
@@ -1424,7 +1424,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="267" lf="267" class="highlighted"><a name="4.3" number="4.3" lo="267" raw="##" class="anchor hanchor" href="#4.3"><span class="hnumber">4.3</span>&nbsp;<span class="htext"></span></a></h2>
+        <h2 lo="267" lf="267"><a name="4.3" number="4.3" lo="267" raw="##" class="anchor hanchor" href="#4.3"><span class="hnumber">4.3</span>&nbsp;<span class="htext"></span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">267</span></div>
       </div>
       <div class="block">
@@ -1446,30 +1446,30 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="275" lf="277">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Into the page.</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                 </div>
               </div>
               <div class="block-info" style="display: none;"><span class="line-numbers">275-277</span></div>
             </div>
           </li>
-          <li markerlength="3" padlength="0" lo="280" lf="286" class="active">
+          <li markerlength="3" padlength="0" lo="280" lf="286">
             <div class="block">
               <p padlength="0" lo="280" lf="281">What is the direction of the induced current in the loop that is consistent with the induced magnetic field found in part 1?</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">280-281</span></div>
             </div>
             <div class="block">
               <div class="inline-html" lo="282" lf="284">
-                <div class="solutionstrue" style="display: block;">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Clockwise.</p>
                   </div>
                 </div>
-                <div class="solutionsfalse" style="display: none;">
+                <div class="solutionsfalse" style="display: block;">
                 </div>
               </div>
               <div class="block-info" style="display: none;"><span class="line-numbers">282-284</span></div>
