--- a/RL_Circuits/RL_Circuits.html
+++ b/RL_Circuits/RL_Circuits.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>LR Circuits</title>
+  <title>RL_Circuits</title>
   <link id="favicon" rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%220.9em%22 font-size=%22100%22>📖</text></svg>">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css" />
   <style>
@@ -581,7 +581,7 @@
         </a>
       </li>
       <li>
-        <a href="#problem-iii" raw="# Problem III" lo="177" class="highlighted">
+        <a href="#problem-iii" raw="# Problem III" lo="177" class="">
           <span class="toctext">Problem III</span>
         </a>
       </li>
@@ -590,7 +590,7 @@
   <div id="display">
     <div class="section">
       <div class="block">
-        <p padlength="0" lo="2" lf="2" class="title">LR Circuits</p>
+        <p padlength="0" lo="2" lf="2" class="active">Title: RL Circuits</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">2</span></div>
       </div>
     </div>
@@ -1007,7 +1007,7 @@ __" class="katex-display fleqn"><span class="katex"><span class="katex-html" ari
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="177" lf="177" class="highlighted"><a name="problem-iii" number="4" lo="177" raw="# Problem III" class="anchor hanchor" href="#problem-iii"><span class="hnumber">4</span>&nbsp;<span class="htext">Problem III</span></a></h1>
+        <h1 lo="177" lf="177" class=""><a name="problem-iii" number="4" lo="177" raw="# Problem III" class="anchor hanchor" href="#problem-iii"><span class="hnumber">4</span>&nbsp;<span class="htext">Problem III</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">177</span></div>
       </div>
       <div class="block">
@@ -1128,7 +1128,7 @@ __" class="katex-display fleqn"><span class="katex"><span class="katex-html" ari
               <div class="block-info" style="display: none;"><span class="line-numbers">222-223</span></div>
             </div>
             <div class="block">
-              <div class="inline-html active" lo="224" lf="245">
+              <div class="inline-html" lo="224" lf="245">
                 <div class="solutionstrue" style="display: block;">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Starting with</p>
