--- a/Lenzs_Law/Lenzs_Law.html
+++ b/Lenzs_Law/Lenzs_Law.html
@@ -587,7 +587,7 @@
             </a>
             <ol class="toc" style="display: none;">
               <li>
-                <a href="#3.2.1" raw="###" lo="90" class="highlighted">
+                <a href="#3.2.1" raw="###" lo="90" class="">
                   <span class="toctext"></span>
                 </a>
               </li>
@@ -597,7 +597,7 @@
                 </a>
               </li>
               <li>
-                <a href="#3.2.3" raw="###" lo="145" class="">
+                <a href="#3.2.3" raw="###" lo="145" class="highlighted">
                   <span class="toctext"></span>
                 </a>
               </li>
@@ -914,7 +914,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h3 lo="90" lf="90" class="highlighted"><a name="3.2.1" number="3.2.1" lo="90" raw="###" class="anchor hanchor" href="#3.2.1"><span class="hnumber">3.2.1</span>&nbsp;<span class="htext"></span></a></h3>
+        <h3 lo="90" lf="90" class=""><a name="3.2.1" number="3.2.1" lo="90" raw="###" class="anchor hanchor" href="#3.2.1"><span class="hnumber">3.2.1</span>&nbsp;<span class="htext"></span></a></h3>
         <div class="block-info" style="display: none;"><span class="line-numbers">90</span></div>
       </div>
       <div class="block">
@@ -955,7 +955,7 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">103-104</span></div>
             </div>
             <div class="block">
-              <div class="inline-html active" lo="105" lf="107">
+              <div class="inline-html" lo="105" lf="107">
                 <div class="solutionstrue">
                   <div class="block">
                     <p padlength="0"><strong raw="{\bf Answer}" markerlength="4"> Answer</strong>: Out of the page</p>
@@ -1076,16 +1076,16 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h3 lo="145" lf="145" class=""><a name="3.2.3" number="3.2.3" lo="145" raw="###" class="anchor hanchor" href="#3.2.3"><span class="hnumber">3.2.3</span>&nbsp;<span class="htext"></span></a></h3>
+        <h3 lo="145" lf="145" class="highlighted"><a name="3.2.3" number="3.2.3" lo="145" raw="###" class="anchor hanchor" href="#3.2.3"><span class="hnumber">3.2.3</span>&nbsp;<span class="htext"></span></a></h3>
         <div class="block-info" style="display: none;"><span class="line-numbers">145</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="147" lf="147">As shown, a conducting wire loop is placed in the magnetic field of a solenoid. Treat the solenoid’s magnetic field as the external magnetic field. Several representative magnetic field lines are shown.</p>
+        <p padlength="0" lo="147" lf="147" class="">As shown, a conducting wire loop is placed in the magnetic field of a solenoid. Treat the solenoid’s magnetic field as the external magnetic field. Several representative magnetic field lines are shown.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">147</span></div>
       </div>
       <div class="block">
-        <div class="inline-html" lo="149" lf="149">
-          <img src="figures/Solenoid.svg?1712692071973">
+        <div class="inline-html active" lo="149" lf="149">
+          <img src="figures/Solenoid.svg">
         </div>
         <div class="block-info" style="display: none;"><span class="line-numbers">149</span></div>
       </div>
@@ -1201,7 +1201,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h3 lo="194" lf="194"><a name="3.2.4" number="3.2.4" lo="194" raw="###" class="anchor hanchor" href="#3.2.4"><span class="hnumber">3.2.4</span>&nbsp;<span class="htext"></span></a></h3>
+        <h3 lo="194" lf="194" class=""><a name="3.2.4" number="3.2.4" lo="194" raw="###" class="anchor hanchor" href="#3.2.4"><span class="hnumber">3.2.4</span>&nbsp;<span class="htext"></span></a></h3>
         <div class="block-info" style="display: none;"><span class="line-numbers">194</span></div>
       </div>
       <div class="block">
