--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@
       font-size: inherit !important;
     }
 
+    .katex-warning {
+      border-right: 0.5em solid red;
+    }
+
     .katex-display {
       text-align: center;
       margin: 0em;
@@ -391,16 +395,6 @@
     .katex-display.fleqn>.katex {
       padding-left: 0em;
       margin: 0em;
-    }
-
-    .katex-warning {
-      border-right: 0.5em solid red;
-    }
-
-    .katex-error-expression {}
-
-    .katex-error-message {
-      color: red;
     }
 
     .page-break {
@@ -428,14 +422,8 @@
         margin: 0.5in 0.75in 0.75in;
       }
 
-      body,
-      html {
-        margin: 0px;
-        padding: 0px;
-        color: rgb(0, 0, 0);
-        background-color: rgb(255, 255, 255);
-        overflow: auto;
-        display: inline;
+      .katex .hide-tail {
+        overflow: hidden !important;
       }
 
       .page-break {
@@ -509,10 +497,6 @@
         padding-right: 0px;
         border: none;
         overflow-wrap: break-word;
-      }
-
-      .katex .hide-tail {
-        overflow: hidden !important;
       }
 
       .katex {
@@ -712,7 +696,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414" class="highlighted">
+            <a href="#magnetic-flux" raw="## Magnetic Flux" lo="414">
               <span class="toctext">Magnetic Flux</span>
             </a>
           </li>
@@ -727,7 +711,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="456">
+            <a href="#rlc-and-ac-circuits" raw="## RLC and AC Circuits" lo="456" class="highlighted">
               <span class="toctext">RLC and AC Circuits</span>
             </a>
           </li>
@@ -2004,7 +1988,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="414" lf="414" class="highlighted"><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor active" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
+        <h2 lo="414" lf="414"><a name="magnetic-flux" number="4.23" lo="414" raw="## Magnetic Flux" class="anchor hanchor" href="#magnetic-flux"><span class="hnumber">4.23</span>&nbsp;<span class="htext">Magnetic Flux</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">414</span></div>
       </div>
       <div class="block">
@@ -2086,7 +2070,7 @@ c-16-25.333-24-45-24-59z"></path>
               <ul lo="445" lf="449" class="compact">
                 <li markerlength="2" padlength="0" lo="445" lf="449">
                   <div class="block">
-                    <p padlength="0" lo="445" lf="449">Documents: | <a href="RL_Circuits/RL_Circuits.pdf">pdf</a> | <a href="RL_Circuits/RL_Circuits-solutions.pdf">pdf solns</a> | <a href="RL_Circuits/RL_Circuits.html">html</a> |</p>
+                    <p padlength="0" lo="445" lf="449" class="">Documents: | <a href="RL_Circuits/RL_Circuits.pdf">pdf</a> | <a href="RL_Circuits/RL_Circuits-solutions.pdf">pdf solns</a> | <a href="RL_Circuits/RL_Circuits.html">html</a> |</p>
                     <div class="block-info" style="display: none;"><span class="line-numbers">445-449</span></div>
                   </div>
                 </li>
@@ -2094,7 +2078,7 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">445-449</span></div>
             </div>
           </li>
-          <li markerlength="2" padlength="0" lo="450" lf="456">
+          <li markerlength="2" padlength="0" lo="450" lf="456" class="">
             <div class="block">
               <p padlength="0" lo="450" lf="454" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RL_Circuits">Github</a> | <a href="RL_Circuits/RL_Circuits.md!" target="_blank">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">450-454</span></div>
@@ -2106,8 +2090,36 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="456" lf="456"><a name="rlc-and-ac-circuits" number="4.26" lo="456" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits"><span class="hnumber">4.26</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
+        <h2 lo="456" lf="456" class="highlighted"><a name="rlc-and-ac-circuits" number="4.26" lo="456" raw="## RLC and AC Circuits" class="anchor hanchor" href="#rlc-and-ac-circuits"><span class="hnumber">4.26</span>&nbsp;<span class="htext">RLC and AC Circuits</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">456</span></div>
+      </div>
+      <div class="block">
+        <ul lo="458" lf="468" class="compact">
+          <li markerlength="2" padlength="0" lo="458" lf="463" class="">
+            <div class="block">
+              <p padlength="0" lo="458" lf="458" class="">Activity - RLC Circuits</p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">458</span></div>
+            </div>
+            <div class="block">
+              <ul lo="459" lf="463" class="compact">
+                <li markerlength="2" padlength="0" lo="459" lf="463" class="">
+                  <div class="block">
+                    <p padlength="0" lo="459" lf="463" class="active">Documents: | <a href="RLC_Circuits/RLC_Circuits.pdf">pdf</a> | <a href="RLC_Circuits/RLC_Circuits-solutions.pdf">pdf solns</a> | <a href="RLC_Circuits/RLC_Circuits.html">html</a> |</p>
+                    <div class="block-info" style="display: none;"><span class="line-numbers">459-463</span></div>
+                  </div>
+                </li>
+              </ul>
+              <div class="block-info" style="display: none;"><span class="line-numbers">459-463</span></div>
+            </div>
+          </li>
+          <li markerlength="2" padlength="0" lo="464" lf="468" class="">
+            <div class="block">
+              <p padlength="0" lo="464" lf="468" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/RLC_Circuits">Github</a> | <a href="RLC_Circuits/RLC_Circuits.md">Markdown</a> | </p>
+              <div class="block-info" style="display: none;"><span class="line-numbers">464-468</span></div>
+            </div>
+          </li>
+        </ul>
+        <div class="block-info" style="display: none;"><span class="line-numbers">458-468</span></div>
       </div>
     </div>
   </div>
